@@ -12,6 +12,8 @@ Fixed: When dragging a junction in a connected circuit, there becomes a gap in t
 
 Save might be broken in version 9.
 
+Solution for 
+
 "Advanced" controls should be show/hide, not enable/disable
     When Steve used CCK in class yesterday, some students interpreted the 
     "Disable" button in the advanced section as "disabling" or "turning off" 
